# ModelX

./: README.md  extract_yaml.py  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  test_mongodb.py
Artifacts/11_17_2025_04_50_56/data_ingestion/feature_store/: DementiaData.csv
Artifacts/11_17_2025_04_50_56/data_transformation/transformed/: test.npy  train.npy
Artifacts/11_17_2025_04_50_56/data_transformation/transformed_object/: preprocessing.pkl
Artifacts/11_17_2025_04_50_56/data_validation/drift_report/: report.yaml
Artifacts/11_17_2025_04_50_56/data_validation/validated/: test.csv  train.csv
Artifacts/11_17_2025_05_13_11/data_ingestion/feature_store/: DementiaData.csv
Artifacts/11_17_2025_05_13_11/data_ingestion/ingested/: test.csv
Artifacts/11_17_2025_05_13_11/data_validation/drift_report/: report.yaml
Artifacts/11_17_2025_05_13_11/data_validation/validated/: train.csv
data_schema/: schema.yaml
notebooks/: Adagard_experiments_final_1.ipynb  Adagard_experiments_notebook.ipynb
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/constants/training_pipeline/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: exception.py
src/utils/main_utils/: utils.py
src/utils/ml_utils/metric/: classification_metric.py
src/utils/ml_utils/model/: estimator.py
